--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="styles" href="/css/style.css">
+    <title>TSJ Asistente</title>
+    <link rel="stylesheets" href="./css/style.css">
 </head>
 <body>
-    <h1>Hola soy una residencia</h1>
+    <div class="main">
+        <form action="">
+            <h1>Login</h1>
+            <div class="input">
+                <input type="text" placeholder="Correo" required>
+            </div>
+            <div class="input">
+                <input type="password" placeholder="Contraseña" required>
+            </div>
+            <button class="btn" type="submit">Iniciar</button>
+            <div class="link-de-registro">
+                <p>No tiene una cuenta? <a href="#">Registrarse</a></p>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
