--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TSJ Asistente</title>
-    <link rel="stylesheets" href="./css/style.css">
+    <link rel="stylesheets" type="text/css" href="css/style.css">
 </head>
 <body>
     <div class="main">
